# dcl120-2020-jul-13

./: README.md
module03-interface.patterns/: CMakeLists.txt
module03-interface.patterns/adapter/: study-adapter-with-caching.cpp  study-adapter.cpp
module03-interface.patterns/bridge/: study-bridge.cpp
module03-interface.patterns/composite/: study-composite.cpp
module03-interface.patterns/facade/: trading-api.cpp
module04-responsibility.patterns/: CMakeLists.txt
module04-responsibility.patterns/chain-of-responsibility/: study-chain.cpp
module04-responsibility.patterns/observer/: study-observer.cpp
module04-responsibility.patterns/proxy/: study-proxy.cpp
module04-responsibility.patterns/singleton/: study-singleton.cpp
module05-construction.patterns/: CMakeLists.txt
module05-construction.patterns/abstract-factory/: HotDrink.h  HotDrinkFactory.h
module05-construction.patterns/builder/: Person.h  PersonAddressBuilder.h  composite-person.cpp
module05-construction.patterns/factory-method/: point.cpp
module05-construction.patterns/memento/: memento.cpp
module06-operation.patterns/command/: study-command.cpp
module06-operation.patterns/strategy/: strategy1.cpp
module07-extension.patterns/: CMakeLists.txt
module07-extension.patterns/decorator/: decorator1.cpp
module07-extension.patterns/visitor/: visitor1.cpp
module6-operation.patterns/: CMakeLists.txt
